--- a/public/css/index.css
+++ b/public/css/index.css
@@ -43,7 +43,7 @@
 	border-right: 1px solid white;
 	text-align: center;
 	text-decoration: none;
-	border-radius: 60px/5px
+	border-radius: 60px/5px;
 	font-family: "Fredoka One";
 }
 
